--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,7 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+
+#some settings
+LocalSettings.php
+src/mindtouch.host/mindtouch.ping.startup.xml
